--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "aws-sdk": "^2.1543.0",
+    "axios": "^1.6.6",
+    "base64-js": "^1.5.1",
+    "date-fns": "^3.3.1",
     "expo": "~50.0.3",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react": "^18.2.0",
+    "react-native": "0.73.2",
+    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-swiper": "^1.6.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
